--- a/iOSCoreLibrary/AlertView/ICLAlertViewController2~iPhone.xib
+++ b/iOSCoreLibrary/AlertView/ICLAlertViewController2~iPhone.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -110,7 +110,7 @@
                     </items>
                 </navigationBar>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="8Gr-xw-ebs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Aeq-j8-fBu"/>
                 <constraint firstItem="MEJ-41-SYm" firstAttribute="height" secondItem="8Gr-xw-ebs" secondAttribute="height" id="DVd-iY-hGG"/>
