--- a/iOSCoreLibrary/AlertView/ICLAlertViewController3.xib
+++ b/iOSCoreLibrary/AlertView/ICLAlertViewController3.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -202,7 +202,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="P5n-56-cel" firstAttribute="width" secondItem="nDF-gm-LGD" secondAttribute="width" id="1OG-Bs-cBl"/>
                         <constraint firstItem="P5n-56-cel" firstAttribute="leading" secondItem="nDF-gm-LGD" secondAttribute="trailing" id="2ki-Tm-sUu"/>
@@ -219,7 +219,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="WpI-7O-QOT" secondAttribute="trailing" id="5O4-07-AMD"/>
                 <constraint firstItem="WpI-7O-QOT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FMV-PA-WcC"/>
