--- a/iOSCoreLibrary/AlertView/ICLAlertViewController3~iPhone.xib
+++ b/iOSCoreLibrary/AlertView/ICLAlertViewController3~iPhone.xib
@@ -27,11 +27,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Gr-xw-ebs">
-                    <rect key="frame" x="0.0" y="44" width="320" height="145"/>
+                    <rect key="frame" x="0.0" y="64" width="320" height="139"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWS-RL-KIQ">
-                            <rect key="frame" x="10" y="10" width="300" height="85"/>
+                            <rect key="frame" x="10" y="10" width="300" height="79"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -39,7 +39,7 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQg-Ba-vWq">
-                            <rect key="frame" x="20" y="105" width="280" height="30"/>
+                            <rect key="frame" x="20" y="99" width="280" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.3357490897" green="0.46117684250000002" blue="0.85015672450000002" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -65,11 +65,11 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MEJ-41-SYm">
-                    <rect key="frame" x="0.0" y="189" width="320" height="146"/>
+                    <rect key="frame" x="0.0" y="203" width="320" height="138"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="seX-uy-g39">
-                            <rect key="frame" x="10" y="10" width="300" height="86"/>
+                            <rect key="frame" x="10" y="10" width="300" height="78"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -77,7 +77,7 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmV-0P-3y8">
-                            <rect key="frame" x="20" y="106" width="280" height="30"/>
+                            <rect key="frame" x="20" y="98" width="280" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.3357490897" green="0.46117684250000002" blue="0.85015672450000002" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -103,11 +103,11 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWi-Tg-5bg">
-                    <rect key="frame" x="0.0" y="335" width="320" height="145"/>
+                    <rect key="frame" x="0.0" y="341" width="320" height="139"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1l-wk-3YY">
-                            <rect key="frame" x="10" y="10" width="300" height="85"/>
+                            <rect key="frame" x="10" y="10" width="300" height="79"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -115,7 +115,7 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hO5-1g-ClV">
-                            <rect key="frame" x="20" y="105" width="280" height="30"/>
+                            <rect key="frame" x="20" y="99" width="280" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.3357490897" green="0.46117684250000002" blue="0.85015672450000002" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -141,7 +141,7 @@
                     </constraints>
                 </view>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qIy-W0-RWW">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="bEI-2d-MlM"/>
@@ -160,7 +160,7 @@
                 <constraint firstItem="aWi-Tg-5bg" firstAttribute="height" secondItem="8Gr-xw-ebs" secondAttribute="height" id="Thi-r3-idl"/>
                 <constraint firstAttribute="trailing" secondItem="qIy-W0-RWW" secondAttribute="trailing" id="Xtc-30-MJf"/>
                 <constraint firstItem="MEJ-41-SYm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="bLJ-be-rch"/>
-                <constraint firstItem="qIy-W0-RWW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="f7h-8I-TKm"/>
+                <constraint firstItem="qIy-W0-RWW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="f7h-8I-TKm"/>
                 <constraint firstItem="aWi-Tg-5bg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="hd4-g7-Dbr"/>
                 <constraint firstItem="qIy-W0-RWW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="iwP-nj-f8N"/>
                 <constraint firstAttribute="trailing" secondItem="MEJ-41-SYm" secondAttribute="trailing" id="ju6-aJ-BOB"/>
