--- a/iOSCoreLibrary/ColourPicker/ICLColourPickerViewController~iPhone.xib
+++ b/iOSCoreLibrary/ColourPicker/ICLColourPickerViewController~iPhone.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -23,11 +23,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ff-Yh-UHh">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="9Rs-jG-32x"/>
@@ -53,11 +53,11 @@
                     </items>
                 </navigationBar>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="viP-ND-sXQ">
-                    <rect key="frame" x="0.0" y="44" width="320" height="436"/>
+                    <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vqb-q5-I6e" customClass="UIImageView">
-                            <rect key="frame" x="20" y="396" width="280" height="30"/>
+                            <rect key="frame" x="20" y="464" width="280" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <accessibility key="accessibilityConfiguration" hint="Slide left to darken the colour. Slid right to lighten the colour." label="Brightness Slider">
@@ -156,7 +156,7 @@
                             </constraints>
                         </view>
                         <imageView contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Zyb-RQ-v7Q">
-                            <rect key="frame" x="20" y="196" width="280" height="192"/>
+                            <rect key="frame" x="20" y="196" width="280" height="260"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <accessibility key="accessibilityConfiguration" hint="Tap a location to select the colour at that point" label="Colour Wheel">
@@ -203,11 +203,12 @@
                 <constraint firstAttribute="trailing" secondItem="viP-ND-sXQ" secondAttribute="trailing" id="UE6-DR-HB0"/>
                 <constraint firstItem="3ff-Yh-UHh" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Xmz-gm-yuG"/>
                 <constraint firstItem="viP-ND-sXQ" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="jzw-DG-gTE"/>
-                <constraint firstItem="3ff-Yh-UHh" firstAttribute="top" secondItem="1" secondAttribute="top" id="rYF-JC-ey3"/>
+                <constraint firstItem="3ff-Yh-UHh" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="rYF-JC-ey3"/>
                 <constraint firstAttribute="bottom" secondItem="viP-ND-sXQ" secondAttribute="bottom" id="rtE-ZD-f3f"/>
                 <constraint firstItem="viP-ND-sXQ" firstAttribute="top" secondItem="3ff-Yh-UHh" secondAttribute="bottom" id="vFj-fV-toN"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
 </document>
